@@ -1,3 +1,12 @@
+2004-04-30  Chris Blumenberg  <cblu@apple.com>
+
+	Fixed: <rdar://problem/3543662>: HITLIST-137: REGRESSION: reproducible hang copying all text at Dave's blog, and other pages
+
+        Reviewed by dave.
+
+        * khtml/xml/dom2_rangeimpl.cpp:
+        (RangeImpl::toHTMLWithOptions): when looping with containingBlock, check the value to see if it is the same
+
 2004-04-30  David Hyatt  <hyatt@apple.com>
 
 	Fix for 3639530, regression on generated content pages.  They crash because I forgot to null-check the style
